--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -56,11 +56,15 @@ filebeat:
       paths:
         - /var/log/varnishncsa.log
       fields:
-        type: varnish_access
+        fields:
+          type: varnish_access
+      fields_under_root: yes
     nginx_access:
       enabled: no
       type: log
       paths:
         - /var/log/nginx/access.log
       fields:
-        type: nginx_access
+        fields:
+          type: nginx_access
+      fields_under_root: yes
