(*) TASK: Rename inputs and input name field

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -35,21 +35,21 @@ filebeat:
         enabled: no
   elasticsearch_pipelines: {}
   inputs:
-    varnish_access:
+    varnish-access:
       enabled: no
       type: log
       paths:
         - /var/log/varnishncsa.log
       fields:
-        fields:
-          type: varnish_access
+        input:
+          name: varnish-access
       fields_under_root: yes
-    nginx_access:
+    nginx-access:
       enabled: no
       type: log
       paths:
         - /var/log/nginx/access.log
       fields:
-        fields:
-          type: nginx_access
+        input:
+          name: nginx-access
       fields_under_root: yes
