TASK: Make Metricbeat and Filebeat config not-world-readable
Might contain secrets.

--- a/tasks/filebeat.yaml
+++ b/tasks/filebeat.yaml
@@ -13,6 +13,7 @@
   template:
     src: "{{ item }}"
     dest: "{{ render_path }}"
+    mode: o-r
   loop_control:
     label: "{{ render_path }}"
   vars:
