--- a/tasks/metricbeat.yaml
+++ b/tasks/metricbeat.yaml
@@ -1,45 +1,42 @@
+---
 - name: Install Metricbeat
-  when: ansible_distribution == 'Ubuntu'
-  apt:
+  when: ansible_os_family == 'Debian'
+  ansible.builtin.apt:
     name: metricbeat
+    update_cache: yes
 
 - name: Create directories for Metricbeat
   when: ansible_os_family == 'FreeBSD'
   loop:
     - "{{ metricbeat.prefix.config }}"
     - "{{ metricbeat.config.path.logs }}"
-  file:
+  ansible.builtin.file:
     state: directory
     path: "{{ item }}"
+    owner: root
+    mode: "0755"
   notify: Restart Metricbeat
 
 - name: Template Metricbeat config
-  loop:
-    - src: metricbeat/metricbeat.yml
-      dest: "{{ metricbeat.prefix.config }}/metricbeat.yml"
-  loop_control:
-    label: "{{ item.dest }}"
-  template:
-    src: "{{ item.src }}"
-    dest: "{{ item.dest }}"
+  ansible.builtin.template:
+    src: metricbeat/metricbeat.yml
+    dest: "{{ metricbeat.prefix.config }}/metricbeat.yml"
     mode: o-r
+    owner: root
   notify: Restart Metricbeat
 
 - name: Configure Metricbeat service
   when: ansible_os_family == 'FreeBSD'
-  loop:
-    - src: rc.conf.d/metricbeat.j2
-      dest: /usr/local/etc/rc.conf.d/metricbeat
-  loop_control:
-    label: "{{ item.dest }}"
-  template:
-    src: "{{ item.src }}"
-    dest: "{{ item.dest }}"
+  ansible.builtin.template:
+    src: rc.conf.d/metricbeat.j2
+    dest: /usr/local/etc/rc.conf.d/metricbeat
+    owner: root
+    mode: "0755"
   notify: Restart Metricbeat
 
 - name: Enable and start Metricbeat
-  service:
+  ansible.builtin.service:
     name: metricbeat
     state: started
     enabled: yes
-  register: metricbeat_service_start_result
+  egister: metricbeat_service_start_result
