--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -38,6 +38,7 @@ metricbeat:
         }}
     fields:
       log: metricbeat
+    fields_under_root: yes
 metricbeat_modules:
   system:
     enabled: no
@@ -86,6 +87,7 @@ filebeat_inputs:
       - /var/log/varnishncsa.log
     fields:
       log: varnish-access
+    fields_under_root: yes
   nginx-access:
     enabled: no
     type: log
@@ -93,6 +95,7 @@ filebeat_inputs:
       - /var/log/nginx/access.log
     fields:
       log: nginx-access
+    fields_under_root: yes
   flow-system:
     enabled: no
     type: log
@@ -100,6 +103,7 @@ filebeat_inputs:
       - /var/www/current/Data/Logs/System.log
     fields:
       log: flow-system
+    fields_under_root: yes
 filebeat_modules:
   haproxy:
     enabled: no
